--- a/AvaloniaVS.Shared/Views/AvaloniaPreviewer.xaml
+++ b/AvaloniaVS.Shared/Views/AvaloniaPreviewer.xaml
@@ -1,38 +1,34 @@
-﻿<UserControl
-    x:Class="AvaloniaVS.Views.AvaloniaPreviewer"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    mc:Ignorable="d">
-    <Grid x:Name="rootGrid">
-        <ScrollViewer
-            x:Name="previewScroller"
-            HorizontalScrollBarVisibility="Auto"
-            VerticalScrollBarVisibility="Auto">
-            <Grid
-                x:Name="previewGrid"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                UseLayoutRounding="True">
-                <Border BorderBrush="Black" BorderThickness="2">
-                    <Border.Effect>
-                        <BlurEffect KernelType="Gaussian" Radius="8" />
-                    </Border.Effect>
-                </Border>
-                <Border>
-                    <Image
-                        Name="preview"
-                        Width="100"
-                        Height="100"
-                        MouseDown="Preview_MouseDown"
-                        MouseMove="Preview_MouseMove"
-                        MouseUp="Preview_MouseUp" />
-                </Border>
-            </Grid>
-        </ScrollViewer>
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             x:Class="AvaloniaVS.Views.AvaloniaPreviewer"
+             d:DesignHeight="450"
+             d:DesignWidth="800"
+             mc:Ignorable="d">
+  <Grid x:Name="rootGrid">
+    <ScrollViewer x:Name="previewScroller"
+                  HorizontalScrollBarVisibility="Auto"
+                  VerticalScrollBarVisibility="Auto">
+      <Grid x:Name="previewGrid"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            UseLayoutRounding="True">
+        <Border BorderBrush="Black" BorderThickness="2">
+          <Border.Effect>
+            <BlurEffect KernelType="Gaussian" Radius="8" />
+          </Border.Effect>
+        </Border>
+        <Border>
+          <Image Name="preview"
+                 Width="100"
+                 Height="100"
+                 MouseDown="Preview_MouseDown"
+                 MouseMove="Preview_MouseMove"
+                 MouseUp="Preview_MouseUp" />
+        </Border>
+      </Grid>
+    </ScrollViewer>
 
     <Border Name="error"
             HorizontalAlignment="Stretch"
@@ -40,44 +36,39 @@
             Background="#80808080"
             Visibility="Collapsed">
 
-      <StackPanel Background="{DynamicResource VsBrush.ToolWindowBackground}"
-                  HorizontalAlignment="Center"
-                  VerticalAlignment="Center">
+      <StackPanel HorizontalAlignment="Center"
+                  VerticalAlignment="Center"
+                  Background="{DynamicResource VsBrush.ToolWindowBackground}">
         <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
           <Grid Margin="0,0,7,0">
-            <Ellipse
-                Width="22"
-                Height="22"
-                Fill="#f55762" />
-            <TextBlock
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                FontSize="16"
-                FontWeight="ExtraBold"
-                Foreground="{DynamicResource VsBrush.WindowText}"
-                Text="!" />
+            <Ellipse Width="22"
+                     Height="22"
+                     Fill="#f55762" />
+            <TextBlock Text="!"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       FontSize="16"
+                       FontWeight="ExtraBold"
+                       Foreground="{DynamicResource VsBrush.WindowText}" />
           </Grid>
 
-          <TextBlock
-            Name="errorHeading"
-            HorizontalAlignment="Center"
-            FontSize="18" />
+          <TextBlock Name="errorHeading"
+                     HorizontalAlignment="Center"
+                     FontSize="18" />
         </StackPanel>
 
-        <TextBlock
-        Name="errorMessage"
-        Margin="20,10,20,0"
-        HorizontalAlignment="Center"
-        TextWrapping="Wrap" />
-        <Button
-          Name="buildButton"
-          Margin="0,15,0,0"
-          Padding="7,5,7,5"
-          Visibility="Hidden"
-          HorizontalAlignment="Center"
-          VerticalAlignment="Center"
-          Content="Build" />
+        <TextBlock Name="errorMessage"
+                   Margin="20,10,20,0"
+                   HorizontalAlignment="Center"
+                   TextWrapping="Wrap" />
+        <Button Content="Build"
+                Name="buildButton"
+                Margin="0,15,0,0"
+                Padding="7,5,7,5"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Visibility="Hidden" />
       </StackPanel>
     </Border>
-    </Grid>
+  </Grid>
 </UserControl>
