--- a/AvaloniaVS.Shared/Views/OptionsView.xaml
+++ b/AvaloniaVS.Shared/Views/OptionsView.xaml
@@ -1,16 +1,15 @@
-﻿<UserControl
-  x:Class="AvaloniaVS.Views.OptionsView"
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:a="clr-namespace:AvaloniaVS"
-  xmlns:conv="clr-namespace:AvaloniaVS.Converters"
-  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:local="clr-namespace:AvaloniaVS.Views"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  xmlns:serilog="clr-namespace:Serilog.Events;assembly=Serilog"
-  d:DesignHeight="450"
-  d:DesignWidth="800"
-  mc:Ignorable="d">
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:a="clr-namespace:AvaloniaVS"
+             xmlns:conv="clr-namespace:AvaloniaVS.Converters"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:AvaloniaVS.Views"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:serilog="clr-namespace:Serilog.Events;assembly=Serilog"
+             x:Class="AvaloniaVS.Views.OptionsView"
+             d:DesignHeight="450"
+             d:DesignWidth="800"
+             mc:Ignorable="d">
   <UserControl.Resources>
     <conv:EnumValuesConverter x:Key="EnumValues" />
   </UserControl.Resources>
@@ -34,59 +33,50 @@
         <ColumnDefinition Width="180" />
       </Grid.ColumnDefinitions>
 
-      <TextBlock
-        Grid.Row="0"
-        Grid.Column="0"
-        VerticalAlignment="Top"
-        Text="Default Document View:" />
-      <ComboBox
-        Grid.Row="0"
-        Grid.Column="2"
-        VerticalAlignment="Center"
-        ItemsSource="{Binding Source={x:Type local:AvaloniaDesignerView}, Converter={StaticResource EnumValues}}"
-        SelectedItem="{Binding DesignerView, Mode=TwoWay}" />
+      <TextBlock Text="Default Document View:"
+                 Grid.Row="0"
+                 Grid.Column="0"
+                 VerticalAlignment="Top" />
+      <ComboBox Grid.Row="0"
+                Grid.Column="2"
+                VerticalAlignment="Center"
+                ItemsSource="{Binding Source={x:Type local:AvaloniaDesignerView}, Converter={StaticResource EnumValues}}"
+                SelectedItem="{Binding DesignerView, Mode=TwoWay}" />
 
-      <TextBlock
-        Grid.Row="2"
-        Grid.Column="0"
-        VerticalAlignment="Top"
-        Text="Split Orientation:" />
+      <TextBlock Text="Split Orientation:"
+                 Grid.Row="2"
+                 Grid.Column="0"
+                 VerticalAlignment="Top" />
       <StackPanel Grid.Row="2" Grid.Column="2">
-        <ComboBox
-          VerticalAlignment="Center"
-          ItemsSource="{Binding Source={x:Type Orientation}, Converter={StaticResource EnumValues}}"
-          SelectedItem="{Binding DesignerSplitOrientation, Mode=TwoWay}" />
-        <CheckBox
-          Margin="0,6,0,0"
-          VerticalAlignment="Center"
-          IsChecked="{Binding DesignerSplitSwapped, Mode=TwoWay}">
+        <ComboBox VerticalAlignment="Center"
+                  ItemsSource="{Binding Source={x:Type Orientation}, Converter={StaticResource EnumValues}}"
+                  SelectedItem="{Binding DesignerSplitOrientation, Mode=TwoWay}" />
+        <CheckBox Margin="0,6,0,0"
+                  VerticalAlignment="Center"
+                  IsChecked="{Binding DesignerSplitSwapped, Mode=TwoWay}">
           Swapped
         </CheckBox>
       </StackPanel>
 
-      <TextBlock
-        Grid.Row="4"
-        Grid.Column="0"
-        VerticalAlignment="Top"
-        Text="Default Zoom Level:" />
-      <ComboBox
-        Grid.Row="4"
-        Grid.Column="2"
-        VerticalAlignment="Center"
-        ItemsSource="{x:Static a:ZoomLevels.Levels}"
-        SelectedItem="{Binding ZoomLevel, Mode=TwoWay}" />
+      <TextBlock Text="Default Zoom Level:"
+                 Grid.Row="4"
+                 Grid.Column="0"
+                 VerticalAlignment="Top" />
+      <ComboBox Grid.Row="4"
+                Grid.Column="2"
+                VerticalAlignment="Center"
+                ItemsSource="{x:Static a:ZoomLevels.Levels}"
+                SelectedItem="{Binding ZoomLevel, Mode=TwoWay}" />
 
-      <TextBlock
-        Grid.Row="6"
-        Grid.Column="0"
-        VerticalAlignment="Top"
-        Text="Minimum Log Verbosity:" />
-      <ComboBox
-        Grid.Row="6"
-        Grid.Column="2"
-        VerticalAlignment="Center"
-        ItemsSource="{Binding Source={x:Type serilog:LogEventLevel}, Converter={StaticResource EnumValues}}"
-        SelectedItem="{Binding MinimumLogVerbosity, Mode=TwoWay}" />
+      <TextBlock Text="Minimum Log Verbosity:"
+                 Grid.Row="6"
+                 Grid.Column="0"
+                 VerticalAlignment="Top" />
+      <ComboBox Grid.Row="6"
+                Grid.Column="2"
+                VerticalAlignment="Center"
+                ItemsSource="{Binding Source={x:Type serilog:LogEventLevel}, Converter={StaticResource EnumValues}}"
+                SelectedItem="{Binding MinimumLogVerbosity, Mode=TwoWay}" />
 
       <!--
       <TextBlock Text="Anonymous Usage Analytics:" Grid.Column="0" Grid.Row="8" VerticalAlignment="Top" />
