--- a/AvaloniaVS.Shared/Views/AvaloniaDesigner.xaml
+++ b/AvaloniaVS.Shared/Views/AvaloniaDesigner.xaml
@@ -1,24 +1,23 @@
-﻿<UserControl
-  x:Class="AvaloniaVS.Views.AvaloniaDesigner"
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:catalog="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
-  xmlns:conv="clr-namespace:AvaloniaVS.Converters"
-  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
-  xmlns:local="clr-namespace:AvaloniaVS.Views"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  xmlns:theming="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Imaging"
-  xmlns:util="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Utilities"
-  xmlns:views="clr-namespace:AvaloniaVS.Shared.Views"
-  Name="root"
-  d:DesignHeight="450"
-  d:DesignWidth="800"
-  theming:ImageThemingUtilities.ImageBackgroundColor="{Binding Background, RelativeSource={RelativeSource Self}, Converter={StaticResource BrushToColorConverter}}"
-  x:ClassModifier="internal"
-  Background="{DynamicResource VsBrush.ToolWindowBackground}"
-  Foreground="{DynamicResource VsBrush.WindowText}"
-  mc:Ignorable="d">
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:catalog="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
+             xmlns:conv="clr-namespace:AvaloniaVS.Converters"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
+             xmlns:local="clr-namespace:AvaloniaVS.Views"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:theming="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Imaging"
+             xmlns:util="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Utilities"
+             xmlns:views="clr-namespace:AvaloniaVS.Shared.Views"
+             x:Class="AvaloniaVS.Views.AvaloniaDesigner"
+             x:ClassModifier="internal"
+             d:DesignHeight="450"
+             d:DesignWidth="800"
+             theming:ImageThemingUtilities.ImageBackgroundColor="{Binding Background, RelativeSource={RelativeSource Self}, Converter={StaticResource BrushToColorConverter}}"
+             Name="root"
+             Background="{DynamicResource VsBrush.ToolWindowBackground}"
+             Foreground="{DynamicResource VsBrush.WindowText}"
+             mc:Ignorable="d">
 
   <UserControl.Resources>
     <util:BrushToColorConverter x:Key="BrushToColorConverter" />
@@ -27,21 +26,19 @@
   </UserControl.Resources>
 
   <DockPanel>
-    <TextBlock
-      Name="pausedMessage"
-      Padding="4"
-      VerticalAlignment="Top"
-      Background="{DynamicResource VsBrush.InfoBackground}"
-      DockPanel.Dock="Top"
-      Foreground="{DynamicResource VsBrush.InfoText}">
+    <TextBlock Name="pausedMessage"
+               Padding="4"
+               VerticalAlignment="Top"
+               Background="{DynamicResource VsBrush.InfoBackground}"
+               DockPanel.Dock="Top"
+               Foreground="{DynamicResource VsBrush.InfoText}">
       The designer is paused waiting for a build to complete.
     </TextBlock>
-    <DockPanel
-      Name="toolbar"
-      Grid.Row="0"
-      Margin="4"
-      VerticalAlignment="Top"
-      DockPanel.Dock="Top">
+    <DockPanel Name="toolbar"
+               Grid.Row="0"
+               Margin="4"
+               VerticalAlignment="Top"
+               DockPanel.Dock="Top">
 
       <DockPanel.Resources>
         <Style TargetType="ListBox">
@@ -59,47 +56,41 @@
         </Style>
       </DockPanel.Resources>
 
-      <ComboBox
-        Padding="2"
-        local:VsTheme.UseVsTheme="True"
-        DisplayMemberPath="Name"
-        DockPanel.Dock="Right"
-        ItemsSource="{Binding Targets, ElementName=root}"
-        SelectedItem="{Binding SelectedTarget, ElementName=root}"
-        Visibility="{Binding Targets, ElementName=root, Converter={StaticResource NotNullOrEmpty}}" />
+      <ComboBox local:VsTheme.UseVsTheme="True"
+                Padding="2"
+                DisplayMemberPath="Name"
+                DockPanel.Dock="Right"
+                ItemsSource="{Binding Targets, ElementName=root}"
+                SelectedItem="{Binding SelectedTarget, ElementName=root}"
+                Visibility="{Binding Targets, ElementName=root, Converter={StaticResource NotNullOrEmpty}}" />
 
-      <ComboBox
-        Margin="0,0,10,0"
-        Padding="2"
-        local:VsTheme.UseVsTheme="True"
-        DockPanel.Dock="Right"
-        IsEditable="True"
-        ItemsSource="{x:Static local:AvaloniaDesigner.ZoomLevels}"
-        Text="{Binding ZoomLevel, ElementName=root, Mode=TwoWay}" />
+      <ComboBox Text="{Binding ZoomLevel, ElementName=root, Mode=TwoWay}"
+                local:VsTheme.UseVsTheme="True"
+                Margin="0,0,10,0"
+                Padding="2"
+                DockPanel.Dock="Right"
+                IsEditable="True"
+                ItemsSource="{x:Static local:AvaloniaDesigner.ZoomLevels}" />
 
       <Grid Name="errorIndicator" DockPanel.Dock="Left">
         <Grid.ToolTip>
-          <StackPanel
-            Name="error"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center">
-            <TextBlock
-              Name="errorHeading"
-              HorizontalAlignment="Center"
-              FontSize="18" />
+          <StackPanel Name="error"
+                      HorizontalAlignment="Left"
+                      VerticalAlignment="Center">
+            <TextBlock Name="errorHeading"
+                       HorizontalAlignment="Center"
+                       FontSize="18" />
             <TextBlock Name="errorMessage" Margin="0,20,0,0" />
           </StackPanel>
         </Grid.ToolTip>
-        <Ellipse
-          Width="18"
-          Height="18"
-          Fill="#f55762" />
-        <TextBlock
-          HorizontalAlignment="Center"
-          VerticalAlignment="Center"
-          FontWeight="ExtraBold"
-          Foreground="White"
-          Text="!" />
+        <Ellipse Width="18"
+                 Height="18"
+                 Fill="#f55762" />
+        <TextBlock Text="!"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontWeight="ExtraBold"
+                   Foreground="White" />
       </Grid>
 
       <ListBox SelectedIndex="{Binding View, ElementName=root, Mode=TwoWay, Converter={StaticResource EnumToInt}}">
@@ -128,17 +119,16 @@
         </ListBoxItem>
       </ListBox>
 
-      <Button
-        x:Name="SwapPanesButton"
-        MinWidth="0"
-        MinHeight="0"
-        Margin="0,0,10,0"
-        Padding="2"
-        VerticalAlignment="Center"
-        local:VsTheme.UseVsTheme="True"
-        Click="SwapPreviewAndXamlPanes"
-        DockPanel.Dock="Right"
-        ToolTip="Swap Preview and Xaml panes">
+      <Button x:Name="SwapPanesButton"
+              local:VsTheme.UseVsTheme="True"
+              MinWidth="0"
+              MinHeight="0"
+              Margin="0,0,10,0"
+              Padding="2"
+              VerticalAlignment="Center"
+              Click="SwapPreviewAndXamlPanes"
+              DockPanel.Dock="Right"
+              ToolTip="Swap Preview and Xaml panes">
         <imaging:CrispImage Moniker="{x:Static catalog:KnownMonikers.SwitchSourceOrTarget}" RenderTransformOrigin="0.5,0.5" />
       </Button>
 
@@ -152,29 +142,25 @@
         <RowDefinition x:Name="codeRow" />
       </Grid.RowDefinitions>
 
-      <views:GridLines
-        Grid.RowSpan="3"
-        Grid.ColumnSpan="3"
-        Margin="0,0,0,5" />
+      <views:GridLines Grid.RowSpan="3"
+                       Grid.ColumnSpan="3"
+                       Margin="0,0,0,5" />
 
-      <local:AvaloniaPreviewer
-        x:Name="previewer"
-        Grid.Column="2"
-        SizeChanged="Preview_SizeChanged" />
+      <local:AvaloniaPreviewer x:Name="previewer"
+                               Grid.Column="2"
+                               SizeChanged="Preview_SizeChanged" />
 
-      <GridSplitter
-        x:Name="splitter"
-        Grid.Row="1"
-        Grid.Column="1"
-        Height="5"
-        HorizontalAlignment="Stretch"
-        VerticalAlignment="Stretch"
-        Background="{DynamicResource VsBrush.PanelSeparator}" />
+      <GridSplitter x:Name="splitter"
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Height="5"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Background="{DynamicResource VsBrush.PanelSeparator}" />
 
-      <Decorator
-        Name="editorHost"
-        Grid.Row="2"
-        Grid.Column="0" />
+      <Decorator Name="editorHost"
+                 Grid.Row="2"
+                 Grid.Column="0" />
     </Grid>
   </DockPanel>
 
